--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "name": "updated-free-fire-battlegrounds-hack-versio09/add-coins-and-diamonds-resources",
-    "description": "Free Fire Battle Grounds Hack Cheats 2018 100% Working Unlimited Free  Coins and Diamonds [No Code] | Free Fire Battle Grounds Hack 2018 How To Get Unlimited  Coins and Diamonds in Free Fire Battle Grounds! 2018 Updated !!No Activation Code!! Free Fire Battle Grounds Hack Cheats 2018 100% Working Unlimited Free Tool 2018 - Glitch Unlimited  Coins and Diamonds! 100% Working!! | Free Fire Battle Grounds Hack 2018 V3 [100% Working] Unlimited  Coins and Diamonds! Android-iOS.",
+    "name": "updated-harry-potter-hogwarts-mystery-hack-2018-05/new-updated-tool",
+    "description": "Harry Potter Hogwarts Mystery Hack Cheats 2018 100% Working Unlimited Free  Battle Points and Diamonds [No Code] | Harry Potter Hogwarts Mystery Hack 2018 How To Get Unlimited  Battle Points and Diamonds in Harry Potter Hogwarts Mystery! 2018 Updated !!No Activation Code!! Harry Potter Hogwarts Mystery Hack Cheats 2018 100% Working Unlimited Free Tool 2018 - Glitch Unlimited  Battle Points and Diamonds! 100% Working!! | Harry Potter Hogwarts Mystery Hack 2018 V3 [100% Working] Unlimited  Battle Points and Diamonds! Android-iOS.",
     "keywords": [
-	"Free Fire Battle Grounds Hack",
-	"Free Fire Battle Grounds Cheats",
-	"Free Fire Battle Grounds Android",
-        "Free Fire Battle Grounds generator"],
+	"Harry Potter Hogwarts Mystery Hack",
+	"Harry Potter Hogwarts Mystery Cheats",
+	"Harry Potter Hogwarts Mystery Android",
+        "Harry Potter Hogwarts Mystery generator"],
 	"authors": [
         {
-            "name": "ACCESS Free Fire Battle Grounds HACK TOOL HERE",
-            "homepage": "http://free-fire-battlegrounds.hackeado.net/"
+            "name": "ACCESS Harry Potter Hogwarts Mystery HACK TOOL HERE",
+            "homepage": "http://mobapps.bid/"
         }
     ],
 	"require": {
