--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "updated-harry-potter-hogwarts-mystery-hack-2018-05/new-updated-tool",
-    "description": "Harry Potter Hogwarts Mystery Hack Cheats 2018 100% Working Unlimited Free  Battle Points and Diamonds [No Code] | Harry Potter Hogwarts Mystery Hack 2018 How To Get Unlimited  Battle Points and Diamonds in Harry Potter Hogwarts Mystery! 2018 Updated !!No Activation Code!! Harry Potter Hogwarts Mystery Hack Cheats 2018 100% Working Unlimited Free Tool 2018 - Glitch Unlimited  Battle Points and Diamonds! 100% Working!! | Harry Potter Hogwarts Mystery Hack 2018 V3 [100% Working] Unlimited  Battle Points and Diamonds! Android-iOS.",
+    "description": "Harry Potter Hogwarts Mystery Hack Cheats 2018 100% Working Unlimited Free Coins And Gems [No Code] | Harry Potter Hogwarts Mystery Hack 2018 How To Get Unlimited  Battle Points and Diamonds in Harry Potter Hogwarts Mystery! 2018 Updated !!No Activation Code!! Harry Potter Hogwarts Mystery Hack Cheats 2018 100% Working Unlimited Free Tool 2018 - Glitch Unlimited  Battle Points and Diamonds! 100% Working!! | Harry Potter Hogwarts Mystery Hack 2018 V3 [100% Working] Unlimited  Battle Points and Diamonds! Android-iOS.",
     "keywords": [
 	"Harry Potter Hogwarts Mystery Hack",
 	"Harry Potter Hogwarts Mystery Cheats",
